--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                 prison.
                                 <br>Solve puzzles and find items that will aid you in your escape.
                                 <br><br>
-                                <b style="color: #6ec0fb">18 million downloads</b>
+                                <b style="color: #6ec0fb;zoom: 1.2;">18 million downloads</b>
                             </p>
 
                             <div ng-show="links" class="links">
