--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             <p style="margin-bottom: 40px;margin-top: -120px">Join Samantha and Gordon in an all new
                                 adventure.
                                 <br><br>
-                                <b style="color: #6ec0fb">1M downloads</b>
+                                <b style="color: #6ec0fb;zoom: 1.2;">1 million downloads</b>
                             </p>
 
                             <div ng-show="links" class="links">
