--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         content="Big Giant Games is a small team of independent game developers dedicated in creating fun, high quality games. Creator of Prison Escape Puzzle." />
     <meta name="keywords" content="big,giant,games,prison,escape,puzzle" />
     <meta name="author" content="Big Giant Games" />
-    <link rel="stylesheet" type="text/css" href="css/container.css" />
+    <link rel="stylesheet" type="text/css" href="css/container.css?" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/custom.css" />
 
@@ -170,7 +170,7 @@
                                 prison.
                                 <br>Solve puzzles and find items that will aid you in your escape.
                                 <br><br>
-                                <b style="color: #6ec0fb;zoom: 1.2;">18 million downloads</b>
+                                <b style="color: #6ec0fb;zoom: 1.1;">18 million downloads</b>
                             </p>
 
                             <div ng-show="links" class="links">
